--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    testImplementation 'androidx.test:core:1.0.0'
+    // Optional -- Mockito framework  for mock coroutines Main
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+
+    //for kt test
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'
 
 
     implementation 'com.github.Dullyoung:BaseHttp:1.0'
