--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,17 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     testImplementation 'junit:junit:4.+'
+
+    //for android test
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
+
+
 
     testImplementation 'androidx.test:core:1.0.0'
     // Optional -- Mockito framework  for mock coroutines Main
@@ -55,6 +64,8 @@ dependencies {
 
     //for kt test
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'
+
+
 
 
     implementation 'com.github.Dullyoung:BaseHttp:1.0'
